module/vpc-ec2/vpc.tf
locals {
  cluster-name = var.cluster-name
}

resource "aws_vpc" "vpc" {
  cidr_block           = var.cidr-block
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = var.vpc-name
    Env  = var.env

  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name                                          = var.igw-name
    env                                           = var.env
    "kubernetes.io/cluster/${local.cluster-name}" = "owned"
  }

  depends_on = [aws_vpc.vpc]
}

resource "aws_subnet" "public-subnet" {
  count                   = var.pub-subnet-count
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = element(var.pub-cidr-block, count.index)
  availability_zone       = element(var.pub-availability-zone, count.index)
  map_public_ip_on_launch = true

  tags = {
    Name                                          = "${var.pub-sub-name}-${count.index + 1}"
    Env                                           = var.env
    "kubernetes.io/cluster/${local.cluster-name}" = "owned"
    "kubernetes.io/role/elb"                      = "1"
  }

  depends_on = [aws_vpc.vpc,
  ]
}

resource "aws_subnet" "private-subnet" {
  count                   = var.pri-subnet-count
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = element(var.pri-cidr-block, count.index)
  availability_zone       = element(var.pri-availability-zone, count.index)
  map_public_ip_on_launch = false

  tags = {
    Name                                          = "${var.pri-sub-name}-${count.index + 1}"
    Env                                           = var.env
    "kubernetes.io/cluster/${local.cluster-name}" = "owned"
    "kubernetes.io/role/internal-elb"             = "1"
  }

  depends_on = [aws_vpc.vpc,
  ]
}


resource "aws_route_table" "public-rt" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = var.public-rt-name
    env  = var.env
  }

  depends_on = [aws_vpc.vpc
  ]
}

resource "aws_route_table_association" "name" {
  count          = 2
  route_table_id = aws_route_table.public-rt.id
  subnet_id      = aws_subnet.public-subnet[count.index].id

  depends_on = [aws_vpc.vpc,
    aws_subnet.public-subnet
  ]
}

# Elastic IP for NAT Gateway
resource "aws_eip" "ngw-eip" {
  count  = length(var.pri-availability-zone) # Zone 수만큼 Elastic IP 생성
  domain = "vpc"

  tags = {
    Name = var.eip-names[count.index] # Elastic IP 이름 지정
  }

  depends_on = [
    aws_vpc.vpc
  ]
}

# NAT Gateway for each availability zone
resource "aws_nat_gateway" "ngw" {
  count         = length(var.pri-availability-zone) # Zone 수만큼 NAT Gateway 생성
  allocation_id = aws_eip.ngw-eip[count.index].id # Zone별 Elastic IP 연결
  subnet_id     = aws_subnet.public-subnet[count.index].id # Zone별 Public Subnet 연결

  tags = {
    Name = var.natgw-names[count.index] # NAT Gateway 이름 지정
  }

  depends_on = [
    aws_vpc.vpc,
    aws_eip.ngw-eip
  ]
}

# Private Route Table for each availability zone
resource "aws_route_table" "private-rt" {
  count  = length(var.pri-availability-zone) # Zone 수만큼 Route Table 생성
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw[count.index].id # Zone별 NAT Gateway 연결
  }

  tags = {
    Name = "${var.private-rt-name}-${var.pri-availability-zone[count.index]}" # Route Table 이름 지정
    env  = var.env
  }

  depends_on = [aws_vpc.vpc]
}

# Associate Private Subnets with respective Route Tables
resource "aws_route_table_association" "private-rt-association" {
  count          = length(var.pri-cidr-block) # Zone 수만큼 Subnet과 Route Table 연결
  route_table_id = aws_route_table.private-rt[count.index].id
  subnet_id      = aws_subnet.private-subnet[count.index].id

  depends_on = [
    aws_vpc.vpc,
    aws_subnet.private-subnet
  ]
}


resource "aws_security_group" "eks-cluster-sg" {
  name        = var.eks-sg
  description = "Allow 443 from Jump Server only"

  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] // It should be specific IP range
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.eks-sg
  }
}

resource "aws_security_group" "ec2-sg" {
  name        = var.ec2-sg
  description = "Allow 443 from Jump Server only"

  vpc_id = aws_vpc.vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] // It should be specific IP range
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] // Jenkins
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.eks-sg
  }
}
